--- a/files/php.ini
+++ b/files/php.ini
@@ -1931,3 +1931,5 @@ ldap.max_links = -1
 
 zend_extension=xdebug.so
 extension=mongo.so
+xdebug.var_display_max_children = -1
+xdebug.var_display_max_depth = -1
